--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ polars = "^0.17.6"
 geopandas = "^0.12.2"
 xlrd = "^2.0.1"
 keplergl = "^0.3.2"
+pyarrow = "^11.0.0"
+requests = "^2.28.2"
+tabulate = "^0.9.0"
 
 
 [build-system]
